--- a/pages/clases.html
+++ b/pages/clases.html
@@ -22,7 +22,7 @@
         <div class="row">
             <h1 class="col-12 titulo-principal"> Clases </h1>
 
-            <nav class="col-12 navbar navbar-expand-lg bg-menu ">
+            <nav class="col-12 navbar navbar-expand-lg bg-menu nav-desk ">
 
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -62,8 +62,8 @@
     <!-- Principal  -->
 
     <main class="contenedorMain">
-        <div class="titulo-general">
-            <h2>
+        <div class="contenidoMain">
+            <h2 class="titulo-general">
                 ¡Disfurta de entrenar cuando y donde puedas!
             </h2>
         </div>
@@ -72,13 +72,13 @@
                 <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active foto-size" data-bs-interval="10000">
-                            <img src="../img/LEO6459.png" class="d-block w-100" alt="posicion de yoga 1 ">
+                            <img class="img-clases" src="../img/LEO6459.png" class="d-block w-100" alt="posicion de yoga 1 ">
                         </div>
                         <div class="carousel-item foto-size" data-bs-interval="2000">
-                            <img src="../img/LEO6441.png" class="d-block w-100" alt="posicion de yoga 2">
+                            <img class="img-clases" src="../img/LEO6441.png" class="d-block w-100" alt="posicion de yoga 2">
                         </div>
                         <div class="carousel-item foto-size">
-                            <img src="../img/LEO6431.png" class="d-block w-100" alt="posicion de yoga 3">
+                            <img class="img-clases" src="../img/LEO6431.png" class="d-block w-100" alt="posicion de yoga 3">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
