--- a/pages/pilatesmat.html
+++ b/pages/pilatesmat.html
@@ -21,7 +21,7 @@
         <div class="row">
             <h1 class="col-12 titulo-principal"> Pilates </h1>
 
-            <nav class="col-12 navbar navbar-expand-lg bg-menu ">
+            <nav class="col-12 navbar navbar-expand-lg bg-menu nav-desk ">
 
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -59,16 +59,16 @@
     
     <!-- principal -->
     <main class="contenedorMain">
-        <div class="titulo-general">
-            <h2>
+        <div class="contenidoMain">
+            <h2 class="titulo-general">
                 Beneficios del Método Pilates
             </h2>
         </div>
     
     <!-- informacion general -->
         <section class="contenedorPilates">
-            <div class="imgPilates">
-                <img src="../img/pilates.png" alt="beneficios de pilates">
+            <div>
+                <img class="imgPilates" src="../img/pilates.png" alt="beneficios de pilates">
             </div>
 
             <div class="textoPilates">
