aplicando poderes de sass

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;600&display=swap" rel="stylesheet">
-
+    
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -72,14 +72,8 @@
             <p> Profe: Anabella Romina Salcito </p>
 
             <div class="textoMain">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam sapiente expedita laudantium nostrum
-                    voluptate veritatis, aut neque, sed ab impedit tenetur eveniet consequatur tempore repellat adipisci
-                    minima minus aperiam ut.
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, molestias laboriosam recusandae
-                    soluta temporibus earum at quas, error dicta veritatis odio voluptatem distinctio ad doloremque
-                    optio,
-                    quasi aut hic numquam.
-
+                <p>
+                    Soy Profesora de todas las disciplinas que verás en esta página certificada oficialmente. Te ofrezco un servicio personalizado, individual o grupos reducidos, APTO PARA TODO EL MUNDO. Adaptando las posturas según la necesidad de cada persona, utilizando soportes si es necesario, para obtener el total beneficio, creando nuevos espacios en nuestro cuerpo, mejorando nuestra fuerza y flexibilidad tanto física como mental. A través de la sincronía del movimiento y la respiración, conseguimos más consciencia corporal y respiratoria, lo que nos ayuda a encontrar paz y calma mental e incrementar nuestra energía vital.
                 </p>
             </div>
 
@@ -91,11 +85,9 @@
         </div>
 
         <div class="introduccionTexto">
-            <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint, hic earum. Autem dolorum ex
-                tempore
-                ratione, est qui, consequuntur a blanditiis, exercitationem quaerat dignissimos. Neque velit
-                sapiente
-                omnis dolor culpa.</p>
+            <p>
+                Una postura que parte de la fuerza de nuestro abdomen. A la que podemos llegar desde Adho Mukha Svanasana (Postura del perro boca abajo) bajando la cadera. Activamos el abdomen y mantenemos la espalda recta y los brazos estirados. Las muñecas deben quedar debajo de los hombros y todo el cuerpo debe estar firme. Podemos permanecer en la postura una respiración completa e ir aumentando las respiraciones en esta postura conforme vayamos ganando fuerza.
+            </p>
         </div>
 
         <div class="introduccionImg2">
@@ -103,11 +95,9 @@
         </div>
 
         <div class="introduccionTexto">
-            <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste eum atque explicabo! Ducimus
-                fugiat quis
-                enim ipsam aspernatur, dolorem voluptates quisquam quasi rem mollitia id velit corporis esse
-                voluptatum
-                animi?
+            <p>
+                Colocamos los hombros, codos y muñecas formando una línea perpendicular al suelo. Al inhalar nuestra espalda se curva hacia el suelo y al exhalar arqueamos la espalda dirigiéndola hacia el techo.
+                Relaja y fortalece la musculatura de la espalda y la zona pélvica. Movilizan toda la columna.
             </p>
         </div>
     </section>
