--- a/pages/clases.html
+++ b/pages/clases.html
@@ -98,10 +98,10 @@
 
 
     <section class="sectionClases">
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore pariatur sint rem. Ratione qui dolore
-            enim
-            molestias fuga dicta mollitia iste? Culpa sapiente dolor assumenda. A harum odio aliquam laborum.
+        <p class="p-clases">
+            Construimos un ambiente cálido, alegre y relajado. Diseñamos una estructura de secuencias para ir mejorando progresivamente las posturas con el fin de aumentar la fuerza necesaria para realizar una elongación segura, liberar la tensión y salir renovados.
+            Las clases son totalmente guiadas, compuestas por 4 o 6 fases acorde a su duración.
+            Se inicia con una toma de conciencia y revitalización, le sigue un acondicionamiento muscular y articular y luego una secuencia de posturas para finalizar en la relajación.
         </p>
     </section>
 
