--- a/pages/pilatesmat.html
+++ b/pages/pilatesmat.html
@@ -117,22 +117,13 @@
                     <p> Sobre este punto EFE Salud señala: Según un artículo de la Universidad Nacional de La Plata, el
                         pilates es un método para la recuperación de lesiones de rodilla como roturas de menisco o de
                         ligamentos cruzados. El proceso debe pasar por varias fases, siendo lo primero eliminar el dolor
-                        y
-                        comenzar a darle movimiento a la articulación. Después, se debe fortalecer la rodilla para que
-                        vuelva a tener un movimiento fluido hasta que permita realizar las actividades o ejercicios
-                        cotidianos.
+                        y comenzar a darle movimiento a la articulación.
                     </p>
                 </div>
 
                 <div class="pregunta">
                     <h4>¿Sufres de dolor en las rodillas?</h4>
-                    <p> Sobre este punto EFE Salud señala: Según un artículo de la Universidad Nacional de La Plata, el
-                        pilates es un método para la recuperación de lesiones de rodilla como roturas de menisco o de
-                        ligamentos cruzados. El proceso debe pasar por varias fases, siendo lo primero eliminar el dolor
-                        y
-                        comenzar a darle movimiento a la articulación. Después, se debe fortalecer la rodilla para que
-                        vuelva a tener un movimiento fluido hasta que permita realizar las actividades o ejercicios
-                        cotidianos.
+                    <p> El Pilates Mat es único en su tipo porque las clases tienen lugar sobre una esterilla de yoga, centrándolo todo en el cuerpo, y es la opción más recomendable para las personas que sufren dolores de espalda, que atraviesan procesos de rehabilitación, o que padecen lesiones crónicas.
                     </p>
                 </div>
 
@@ -141,11 +132,7 @@
 
         <!-- video presentacion -->
             <div class="videoPilates">
-                <!--cambiar video-->
-                <iframe class="videoUno" src="https://www.youtube.com/embed/YPJwPRTGmyw" title="YouTube video player"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+                <iframe class="videoUno" width="560" height="315" src="https://www.youtube.com/embed/sAhgwFoB1C0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
         </section>
