aplicando propiedades de sass y seo

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
+    <meta name="description" content="Bienvenidos al mejor portal de entrenamiento corporal">
+    <meta name="keywords" content="ENTRENAMIENTO, YOGA, PILATES, CLASES, ELONGACION">
+    <!-- Colores -->
+    <link rel="stylesheet" href="https://colorhunt.co/palette/f4bfbfffd9c0faf0d78cc0de">
+    
     <!-- Fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +21,7 @@
     <!-- mi css -->
     <link rel="stylesheet" href="css/styles.css">
 
-    <title> Home - Sky Espacio </title>
+    <title> Home - Sky Spacio </title>
 </head>
 
 <body>
@@ -39,10 +42,10 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                            <a class="nav-link" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="pages/pilatesmat.html">Pilates</a>
+                            <a class="nav-link" href="pages/pilatesmat.html">Pilates</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="pages/elongacion-biomecanica.html">Elongacion</a>
@@ -69,7 +72,7 @@
     <main class="contenedorMain">
         <div class="contenidoMain">
 
-            <p> Profe: Anabella Romina Salcito </p>
+            <h3 class="nombre-profe"> Profe: Anabella Romina Salcito </h3>
 
             <div class="textoMain">
                 <p>
