--- a/pages/clases.html
+++ b/pages/clases.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="description" content="Veni a tomar las mejores clases presenciales, individuales o grupales. En Sky Spacio sos nuestra prioridad.">
+    <meta name="keywords" content="CLASES, PRESENCIALES, ONLINE, GRUPALES">
+    
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- mi css -->
     <link rel="stylesheet" href="../css/styles.css">
 
-    <title> Clases - Sky Espacio </title>
+    <title> Clases - Sky Spacio </title>
 </head>
 
 <body>
@@ -33,10 +35,10 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                            <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../pages/pilatesmat.html">Pilates</a>
+                            <a class="nav-link" href="../pages/pilatesmat.html">Pilates</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/elongacion-biomecanica.html">Elongacion</a>
@@ -64,7 +66,7 @@
     <main class="contenedorMain">
         <div class="contenidoMain">
             <h2 class="titulo-general">
-                ¡Disfurta de entrenar cuando y donde puedas!
+                ¡Disfruta de entrenar cuando y donde puedas!
             </h2>
         </div>
             <!-- carrusel bootstrap -->
@@ -72,13 +74,13 @@
                 <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active foto-size" data-bs-interval="10000">
-                            <img class="img-clases" src="../img/LEO6459.png" class="d-block w-100" alt="posicion de yoga 1 ">
+                            <img class="img-clases" src="../img/LEO6459.png" class="d-block w-100" alt="pose de yoga 1 ">
                         </div>
                         <div class="carousel-item foto-size" data-bs-interval="2000">
-                            <img class="img-clases" src="../img/LEO6441.png" class="d-block w-100" alt="posicion de yoga 2">
+                            <img class="img-clases" src="../img/LEO6441.png" class="d-block w-100" alt="pose de yoga 2">
                         </div>
                         <div class="carousel-item foto-size">
-                            <img class="img-clases" src="../img/LEO6431.png" class="d-block w-100" alt="posicion de yoga 3">
+                            <img class="img-clases" src="../img/LEO6431.png" class="d-block w-100" alt="pose de yoga 3">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
