--- a/pages/elongacion-biomecanica.html
+++ b/pages/elongacion-biomecanica.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="description" content="¡Elongar te cambia la vida! Estamos muy seguros de esa afirmacion y queremos que vos lo compruebes, animate!">
+    <meta name="keywords" content="ELONGACION, MUSCULOS, ESTIRAMIENTO, FLEXIBILIDAD, CUERPO">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- mi css -->
     <link rel="stylesheet" href="../css/styles.css">
 
-    <title> Elongacion Biomecanica </title>
+    <title> Elongacion Biomecanica - Sky Spacio </title>
 </head>
 
 <body>
@@ -35,11 +36,10 @@
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                                <a class="nav-link" href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page"
-                                    href="../pages/pilatesmat.html">Pilates</a>
+                                <a class="nav-link" href="../pages/pilatesmat.html">Pilates</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="../pages/elongacion-biomecanica.html">Elongacion</a>
