aplicando seo y sass

--- a/pages/clases.html
+++ b/pages/clases.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- seo -->
     <meta name="description" content="Veni a tomar las mejores clases presenciales, individuales o grupales. En Sky Spacio sos nuestra prioridad.">
     <meta name="keywords" content="CLASES, PRESENCIALES, ONLINE, GRUPALES">
     
@@ -98,7 +99,7 @@
         </div>
     </main>
 
-
+    <!-- Parrafo explicativo -->
     <section class="sectionClases">
         <p class="p-clases">
             Construimos un ambiente cálido, alegre y relajado. Diseñamos una estructura de secuencias para ir mejorando progresivamente las posturas con el fin de aumentar la fuerza necesaria para realizar una elongación segura, liberar la tensión y salir renovados.
@@ -190,7 +191,7 @@
     <!-- boton de wsp -->
     <div class="contenedor-btn">
         <a href="https://wa.me/5491166335845?text=Quiero%20tomar%20clases%20php" target="_blank">
-            <img class="boton" src="../img/iconowsp.png" alt="icono de wsp">
+            <img class="boton" src="../img/iconowsp.png" alt="icono de whatsapp">
         </a>
     </div>
 
