--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- seo -->
     <meta name="description" content="Contactate con los mejores profesionales de manera rapida y segura">
     <meta name="keywords" content="CONTACTO, MAIL, REDES, INFO, INFORMACION">
     <!-- CSS only -->
@@ -111,6 +112,7 @@
             </fieldset>
         </form>
 
+        <!-- redes sociales -->
         <h3> Buscanos en nuestras redes </h3>
             
             <section class="instagram">
