--- a/pages/elongacion-biomecanica.html
+++ b/pages/elongacion-biomecanica.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- seo -->
     <meta name="description" content="¡Elongar te cambia la vida! Estamos muy seguros de esa afirmacion y queremos que vos lo compruebes, animate!">
     <meta name="keywords" content="ELONGACION, MUSCULOS, ESTIRAMIENTO, FLEXIBILIDAD, CUERPO">
     <!-- CSS only -->
@@ -60,8 +61,7 @@
             </div>
         </header>
 
-
-
+        <!-- subtitulo -->
         <main class="contenedorMain">
             <div class="contenidoMain">
                 <h2 class="titulo-general">
@@ -70,7 +70,7 @@
             </div>
         </main>
 
-    
+        <!-- fotos -->
         <section class="section-uno">
             <img class="imgElongacion" src="../img/LEO6441.png" alt="mujer elongando">
         </section>
@@ -79,7 +79,7 @@
             <img class="imgElongacion" src="../img/LEO6559.png" alt="mujer elongando">
         </section>
 
-
+        <!-- venta de la disciplina -->
         <section class="section-tres">
             <p class="texto-elongacion">
                 Este es un espacio pensado para mejorar la calidad de vida de quienes se acerquen a la propuesta, ya
