--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- seo -->
     <meta name="description" content="Bienvenidos al mejor portal de entrenamiento corporal">
     <meta name="keywords" content="ENTRENAMIENTO, YOGA, PILATES, CLASES, ELONGACION">
     <!-- Colores -->
