--- a/pages/yoga.html
+++ b/pages/yoga.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- seo -->
     <meta name="description" content="Descubri el yoga junto a nosotros con los mejores tutoriales para que puedas entrenar desde casa.">
     <meta name="keywords" content="YOGA, ENTRENA, TUTORIAL, VIDEOS">
     <!-- CSS only -->
@@ -59,12 +60,13 @@
 
 
 
-    <!-- principal -->
+    <!-- subtitulo -->
     <main class="contenedorMain">
         <div class="contenidoMain">
             <h2 class="titulo-general"> Yoga es Unión </h2>
         </div>
     
+        <!--venta de la disciplina -->
         <p> Entre otras, el yoga busca la unión del cuerpo y la mente, y es por ello por lo que en las clases se trabajan diferentes aspectos físicos: equilibrio, fuerza, flexibilidad… Pero sin olvidar la parte emocional: relajación, calma, concentración….</p>
       
         <h3 class="subtitulo-yoga"> Clases de yoga segun su beneficio </h3>
