--- a/pages/pilatesmat.html
+++ b/pages/pilatesmat.html
@@ -89,7 +89,9 @@
 
                 <div class="pregunta">
                     <h3>¿Ayuda a la respiración?</h3>
-                    <p> Desde Fisio and Therapies dicen: La coordinación entre la respiración y el movimiento mejora la
+                    <p> Desde Fisio and Therapies dicen:
+                        La coordinación entre
+                        la respiración y el movimiento mejora la
                         salud de tu corazón y tus pulmones, favorece la capacidad pulmonar, reduce tu presión arterial,
                         incrementa tu energía, mejora tu circulación y te brinda la posibilidad de relajarte en momentos
                         tensos.
@@ -98,7 +100,8 @@
 
                 <div class="pregunta">
                     <h3>¿Quieres perder rigidez?</h3>
-                    <p>El pilates es una de las modalidades más recomendadas para las personas con problemas en las
+                    <p> El pilates es una de las modalidades más recomendadas
+                        para las personas con problemas en las
                         articulaciones o que pasan mucho tiempo sentados. “Durante las clases de pilates se mejora la
                         movilidad
                         de las articulaciones, lo que hace que con el tiempo se gane movimiento en ellas y se pierda
@@ -108,16 +111,16 @@
 
                 <div class="pregunta">
                     <h4>¿Tonifica el cuerpo?</h4>
-                    <p>
-
-                        Sí, apunta Fisio and Therapies. Trabaja todos los músculos del cuerpo, es muy efectivo para
+                    <p> Sí, apunta Fisio and Therapies. Trabaja todos los
+                        músculos del cuerpo, es muy efectivo para
                         tonificar músculos y dar forma de manera integral.
                     </p>
                 </div>
 
                 <div class="pregunta">
                     <h4>¿Sufres de dolor en las rodillas?</h4>
-                    <p> Sobre este punto EFE Salud señala: Según un artículo de la Universidad Nacional de La Plata, el
+                    <p> Sobre este punto EFE Salud señala: Según un artículo
+                        de la Universidad Nacional de La Plata, el
                         pilates es un método para la recuperación de lesiones de rodilla como roturas de menisco o de
                         ligamentos cruzados. El proceso debe pasar por varias fases, siendo lo primero eliminar el dolor
                         y comenzar a darle movimiento a la articulación.
@@ -126,11 +129,10 @@
 
                 <div class="pregunta">
                     <h4>¿Sufres de dolor en las rodillas?</h4>
-                    <p> El Pilates Mat es único en su tipo porque las clases tienen lugar sobre una esterilla de yoga, centrándolo todo en el cuerpo, y es la opción más recomendable para las personas que sufren dolores de espalda, que atraviesan procesos de rehabilitación, o que padecen lesiones crónicas.
+                    <p> El Pilates Mat es único en su tipo porque las clases
+                        tienen lugar sobre una esterilla de yoga, centrándolo todo en el cuerpo, y es la opción más recomendable para las personas que sufren dolores de espalda, que atraviesan procesos de rehabilitación, o que padecen lesiones crónicas.
                     </p>
                 </div>
-
-
             </div>
 
         <!-- video -->
