--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 
             <nav class="col-12 navbar navbar-expand-lg bg-menu nav-desk ">
 
-
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -60,7 +59,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="pages/contacto.html">Contacto</a>
                         </li>
-
                     </ul>
                 </div>
             </nav>
@@ -77,7 +75,7 @@
 
             <div class="textoMain">
                 <p>
-                    Soy Profesora de todas las disciplinas que verás en esta página certificada oficialmente. Te ofrezco un servicio personalizado, individual o grupos reducidos, APTO PARA TODO EL MUNDO. Adaptando las posturas según la necesidad de cada persona, utilizando soportes si es necesario, para obtener el total beneficio, creando nuevos espacios en nuestro cuerpo, mejorando nuestra fuerza y flexibilidad tanto física como mental. A través de la sincronía del movimiento y la respiración, conseguimos más consciencia corporal y respiratoria, lo que nos ayuda a encontrar paz y calma mental e incrementar nuestra energía vital.
+                    Soy Profesora de todas las disciplinas que verás en esta página certificada oficialmente. Te ofrezco un servicio personalizado, individual o grupos reducidos, APTO PARA TODO EL MUNDO. Adaptando las posturas según la necesidad de cada persona, utilizando soportes si es necesario, para obtener el total beneficio, creando nuevos espacios en nuestro cuerpo, mejorando nuestra fuerza y flexibilidad tanto física como mental. A través de la sincronía del movimiento y la respiración, conseguimos más consciencia corporal y respiratoria, lo que nos ayuda a encontrar paz y calma mental e incrementar nuestra energía.
                 </p>
             </div>
 
