--- a/pages/pilatesmat.html
+++ b/pages/pilatesmat.html
@@ -89,7 +89,7 @@
 
                 <div class="pregunta">
                     <h3>¿Ayuda a la respiración?</h3>
-                    <p> Desde Fisio and Therapies dicen:
+                    <p> 
                         La coordinación entre
                         la respiración y el movimiento mejora la
                         salud de tu corazón y tus pulmones, favorece la capacidad pulmonar, reduce tu presión arterial,
@@ -111,9 +111,8 @@
 
                 <div class="pregunta">
                     <h4>¿Tonifica el cuerpo?</h4>
-                    <p> Sí, apunta Fisio and Therapies. Trabaja todos los
-                        músculos del cuerpo, es muy efectivo para
-                        tonificar músculos y dar forma de manera integral.
+                    <p>
+                        Esta modalidad deportiva ofrece muchísimos efectos y beneficios en el organismo, como tonificación de los músculos, incremento de la flexibilidad o mejoras en el estado de ánimo, entre otros.
                     </p>
                 </div>
 
@@ -128,7 +127,7 @@
                 </div>
 
                 <div class="pregunta">
-                    <h4>¿Sufres de dolor en las rodillas?</h4>
+                    <h4>¿Por qué Pilates Mat?</h4>
                     <p> El Pilates Mat es único en su tipo porque las clases
                         tienen lugar sobre una esterilla de yoga, centrándolo todo en el cuerpo, y es la opción más recomendable para las personas que sufren dolores de espalda, que atraviesan procesos de rehabilitación, o que padecen lesiones crónicas.
                     </p>
