--- a/pages/yoga.html
+++ b/pages/yoga.html
@@ -25,7 +25,6 @@
 
             <nav class="col-12 navbar navbar-expand-lg bg-menu nav-desk ">
 
-
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -51,14 +50,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                         </li>
-
                     </ul>
                 </div>
             </nav>
         </div>
     </header>
-
-
 
     <!-- subtitulo -->
     <main class="contenedorMain">
@@ -67,11 +63,16 @@
         </div>
     
         <!--venta de la disciplina -->
-        <p> Entre otras, el yoga busca la unión del cuerpo y la mente, y es por ello por lo que en las clases se trabajan diferentes aspectos físicos: equilibrio, fuerza, flexibilidad… Pero sin olvidar la parte emocional: relajación, calma, concentración….</p>
-      
+        <p> Entre otras, el yoga busca la unión del cuerpo y la mente, y es por ello por lo que en las   
+            clases se trabajan diferentes aspectos físicos: equilibrio, fuerza, flexibilidad… Pero sin olvidar la parte emocional: relajación, calma, concentración….            
+        </p>
+
         <h3 class="subtitulo-yoga"> Clases de yoga segun su beneficio </h3>
- 
-        <p>Podemos adaptar el yoga a prácticamente todas nuestras necesidades: adelgazar, ganar flexibilidad, tonificar, aliviar molestias, mejorar la postura… Elige tu objetivo y busca la clase en base a él. Te dejo algunos ejemplos con distintas intenciones:</p>
+
+        <p> Podemos adaptar el yoga a prácticamente todas nuestras necesidades: adelgazar, ganar 
+            flexibilidad, tonificar, aliviar molestias, mejorar la postura… Elige tu objetivo y busca la clase en base a él. Te dejo algunos ejemplos con distintas intenciones:
+        </p>
+
         <h4 class="subtitulo-yoga"> 1. Yoga para el abdomen</h4>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/_8aPNEFoMOk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
