--- a/pages/elongacion-biomecanica.html
+++ b/pages/elongacion-biomecanica.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- seo -->
-    <meta name="description" content="¡Elongar te cambia la vida! Estamos muy seguros de esa afirmacion y queremos que vos lo compruebes, animate!">
+    <meta name="description"
+        content="¡Elongar te cambia la vida! Estamos muy seguros de esa afirmacion y queremos que vos lo compruebes, animate!">
     <meta name="keywords" content="ELONGACION, MUSCULOS, ESTIRAMIENTO, FLEXIBILIDAD, CUERPO">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -105,21 +106,21 @@
                 para poder aprovechar al máximo cada segundo del ejercicio.
             </p>
         </section>
-  
-
-    <!-- boton de wsp -->
-    <div class="contenedor-btn">
-        <a href="https://wa.me/5491166335845?text=Quiero%20tomar%20clases%20php" target="_blank">
-            <img class="boton" src="../img/iconowsp.png" alt="icono de wsp">
-        </a>
-    </div>
 
 
-    <!-- footer -->
+        <!-- boton de wsp -->
+        <div class="contenedor-btn">
+            <a href="https://wa.me/5491166335845?text=Quiero%20tomar%20clases%20php" target="_blank">
+                <img class="boton" src="../img/iconowsp.png" alt="icono de wsp">
+            </a>
+        </div>
 
-    <footer>
-        <h2> TODOS LOS DERECHOS RESERVADOS </h2>
-    </footer>
+
+        <!-- footer -->
+
+        <footer>
+            <h2> TODOS LOS DERECHOS RESERVADOS </h2>
+        </footer>
 
     </div>
 
